--- a/frontend/src/pages/Admin/HouseholdTemporaryList/HouseholdTemporaryList.css
+++ b/frontend/src/pages/Admin/HouseholdTemporaryList/HouseholdTemporaryList.css
@@ -77,3 +77,21 @@
   color: #8898aa;
   font-weight: 600;
 }
+
+.btn-add {
+  margin-left: auto; 
+  background-color: #2dce89; 
+  border: px solid #2dce89;
+  border-radius: 6px;
+  color: #fff; 
+  font-weight: 600;
+  transition: all 0.2s ease;
+  box-shadow: 0 4px 6px rgba(45, 206, 137, 0.11); 
+}
+
+.btn-add:hover {
+  background-color: #25a972; 
+  border-color: #25a972;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 6px rgba(45, 206, 137, 0.3); 
+}
