--- a/frontend/src/components/forms/Form.css
+++ b/frontend/src/components/forms/Form.css
@@ -106,3 +106,20 @@
   background-color: #ef4444 !important;
   color: white !important;
 }
+.form-hint {
+  display: block;
+  margin-top: 4px;
+  font-size: 12px;
+  color: #64748b;
+  font-style: italic;
+}
+
+.form-input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
+
+.form-input[type="number"]::-webkit-inner-spin-button,
+.form-input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
