refactor: add Header to use database and also avatar using first letter in first_name and last_name, remove search

--- a/frontend/src/components/layout/Header.css
+++ b/frontend/src/components/layout/Header.css
@@ -30,6 +30,7 @@
   min-width: auto !important;
   color: #6b7280 !important;
 }
+
 .user-info {
   display: flex;
   align-items: center;
@@ -61,6 +62,18 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.avatar-initials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .icon-button:hover {
